--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [project]
 name = "md2lang-oai"
-version = "0.1.0"
+version = "1.0.0"
 description = "Minimal CLI to translate Markdown/text to a target locale via an OpenAI-compatible Chat Completions endpoint."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
-keywords = ["markdown", "translation", "cli", "openai", "httpx"]
+keywords = ["markdown", "translation", "cli", "openai"]
 dependencies = [
   "click>=8.1",
   "httpx>=0.27",
 ]
 
 [project.urls]
-Repository = ""
+Repository = "https://github.com/carloscasalar/md2lang-oai"
 
 [project.scripts]
 md2lang-oai = "md2lang_oai.cli:main"
