--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { file = "LICENSE" }
 keywords = ["markdown", "translation", "cli", "openai"]
-dependencies = [
-  "click>=8.1",
-  "httpx>=0.27",
-]
+dependencies = ["click>=8.1", "httpx>=0.27"]
 
 [project.urls]
 Repository = "https://github.com/carloscasalar/md2lang-oai"
@@ -29,6 +26,4 @@ addopts = "-q"
 testpaths = ["tests"]
 
 [dependency-groups]
-dev = [
-  "pytest>=8.0",
-]
+dev = ["pytest>=8.0"]
